bk_ida/gccida/c1/binary_fp_operator
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/binary_fp_operator/src/i386.c:3863:34: error: must use 'enum' tag to refer to type 'machine_mode'
int  binary_fp_operator( rtx op, machine_mode mode) 
                                 ^
                                 enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/binary_fp_operator/src/i386.c:3873:17: error: must use 'enum' tag to refer to type 'mode_class'
return *( const mode_class *)( ( char *)mode_class_0 + ( ( v3 >> 14) & 0x3FC)) == MODE_FLOAT; 
                ^
                enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/binary_fp_operator/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/binary_fp_operator/src/i386.c:3873:41: error: use of undeclared identifier 'mode_class_0'
return *( const mode_class *)( ( char *)mode_class_0 + ( ( v3 >> 14) & 0x3FC)) == MODE_FLOAT; 
                                        ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/binary_fp_operator/src/obj/i386.o] Error 1
